<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChocolateList">

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_chocolate_to_list"
        android:textSize="20sp"
        app:backgroundTint="#F607EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_home"
        android:textSize="20sp"
        app:backgroundTint="#F607EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />


    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/layoutstyle"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-74dp"
        tools:layout_editor_absoluteY="202dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="serif"
            android:text="@string/label"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="41dp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="728dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/buttonstyle"
            android:fontFamily="serif"
            android:hint="@string/enter_rest_of_name_here"
            android:inputType="textShortMessage"
            android:padding="8dp"
            android:textColor="#673AB7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_level"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/alert_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/buttonstyle"
            android:fontFamily="serif"
            android:hint="@string/alert_level"
            android:inputType="textShortMessage"
            android:padding="8dp"
            android:textColor="#673AB7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/quantity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/buttonstyle"
            android:fontFamily="serif"
            android:hint="@string/quantity_level"
            android:inputType="textShortMessage"
            android:padding="8dp"
            android:textColor="#673AB7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_1_for_yes_0_for_no"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/popular_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/buttonstyle"
            android:fontFamily="serif"
            android:hint="@string/popular"
            android:inputType="textShortMessage"
            android:padding="8dp"
            android:textColor="#673AB7"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>